--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@designbycode/tailwindcss-text-stroke": "^1.2.1",
     "@material-tailwind/react": "^2.1.8",
     "next": "14.1.0",
     "react": "^18",
