--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@designbycode/tailwindcss-text-stroke": "^1.2.1",
     "@material-tailwind/react": "^2.1.8",
+    "@vercel/analytics": "^1.3.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
